# nvidia-nim-benchmarks

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  fetch_intelligence.py  filter_models.py  gen_html.py  generate_index.py  hf-slug.py  index.html  pyproject.toml  requirements.txt  run_benchmark.py
.codebot/: task-state.json
.github/workflows/: daily.yml
.spark/: data.db-shm  data.db-wal
_data/: endpoint_snapshot.json  intelligence.csv  models.txt  tps.csv
data/: aa_raw.json  tps.csv
google/: filter_models.py  run_benchmark.py  tps-aa_matcher.py
google/data/: endpoint_snapshot.json  models.txt  tps.csv
mistral/: filter_models.py  run_benchmark.py  tps-aa_matcher.py
mistral/data/: endpoint_snapshot.json  models.txt  tps.csv
nous/: filter_models.py  run_benchmark.py  tps-aa_matcher.py
nous/data/: endpoint_snapshot.json  models.txt  tps.csv
nvidia/: filter_models.py  run_benchmark.py  tps-aa_matcher.py
nvidia/data/: endpoint_snapshot.json  models.txt  tps.csv
opencode/: filter_models.py  run_benchmark.py  tps-aa_matcher.py
opencode/data/: endpoint_snapshot.json  models.txt  tps.csv
openrouter/: filter_models.py  run_benchmark.py  tps-aa_matcher.py
openrouter/data/: endpoint_snapshot.json  models.txt  tps.csv
shared/: benchmark.py  config.py  csv_utils.py  filter.py  matcher.py  provider.py  snapshot.py
