[project]
name = "nvidia-nim-benchmarks"
version = "0.1.0"
description = "Benchmarks NIM chat models for TPS, renders static leaderboard."
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "python-dotenv",
]
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
